--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div>
-    <form th:action="@{/convertToCircuitExcelFile}" method="post">
+    <form th:action="@{/getPaData}" method="post">
         <input type="submit" class="btn btn-primary" value="Konvertieren"/>
     </form>
 </div>
